<resources>
    <string name="app_name">Checked.In</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="createAccount">Create Account</string>
    <string name="alreadyMember">Already a member? Login</string>
    <string name="title_activity_create_group">CreateGroup</string>
    <string name="my_group">MyGroups</string>
    <string name="create_group">Create</string>
    <string name="join_group">Join</string>
    <string name="group_name">Group Name</string>
    <string name="add_members">Add Members to the Group</string>
    <string name="create_button">Create</string>
    <string name="group_key">Key</string>
    <string name="group_owner_email">Group Owner Email</string>
    <string name="uploadPicture">Please upload a profile picture</string>
    <string name="remove_member">Remove</string>
    <string name="track_tab">Track</string>
    <string name="channel_name">CheckedIn</string>
    <string name="channel_description">CheckedInMessages</string>
    <string name="cancel">Cancel</string>

</resources>
